Commit:gallery thumbs and lightbox

--- a/index.html
+++ b/index.html
@@ -46,11 +46,11 @@
           <li data-Id="3"><img src="./images/image-product-3.jpg" alt="product"></li>
           <li data-Id="4"><img src="./images/image-product-4.jpg" alt="product"></li>
         </ul>
-        <button class="arrow arrow__left"><img src="./images/icon-previous.svg"></button>
-        <button class="arrow arrow__right"><img src="./images/icon-next.svg"></button>
+        <button class="arrow arrow__left"></button>
+        <button class="arrow arrow__right"></button>
       </div>
       <ul class="wrapper__thumbs">
-        <li data-Id="1"><img src="./images/image-product-1-thumbnail.jpg" alt="product"></li>
+        <li data-Id="1" class="checked"><img src="./images/image-product-1-thumbnail.jpg" alt="product"></li>
         <li data-Id="2"><img src="./images/image-product-2-thumbnail.jpg" alt="product"></li>
         <li data-Id="3"><img src="./images/image-product-3-thumbnail.jpg" alt="product"></li>
         <li data-Id="4"><img src="./images/image-product-4-thumbnail.jpg" alt="product"></li>
