--- a/index.html
+++ b/index.html
@@ -31,6 +31,10 @@
     <div class="wrapper__cart__user">
       <div class="wrapper__cart">
         <img src="./images/icon-cart.svg" alt="cart">
+        <div class="cart">
+          <h4>Cart</h4>
+          <p>Your cart is empty.</p>
+        </div>
       </div>
       <div class="wrapper__user">
         <img src="./images/image-avatar.png" alt="avatar">
@@ -66,18 +70,19 @@
         durable rubber outer sole, they’ll withstand everything the weather can offer.
       </p>
       <div class="wrapper__price">
-    <h2>$125.00<span>50%</span></h2>
+    <h2 data-value = "125.00">$125.00<span>50%</span></h2>
     <h3>$250.00</h3>
       </div>
       <form type="submit" class="wrapper__add__product">
         <div class="wrapper__input">
-        <button class="button__minus"></button>
-    <input id="input__add__product" type="number" min="1" max="100" step="1" value="0">
-    <button class="button__plus"></button>
-  </div>
-    <button class="button__add__product"><img src='./images/icon-cart.svg'>Add to cart</button>
-  </form>
+          <button class="button__minus"></button>
+          <input id="input__add__product" type="number" min="1" max="100" step="1" value="0">
+          <button class="button__plus"></button>
+        </div>
+        <button class="button__add__product"><img src='./images/icon-cart.svg'>Add to cart</button>
+      </form>
   </article>
+
   </main>
 
 <footer>
