resetting input and blocking rerendering cart

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
           <input id="input__add__product" type="number" min="1" max="100" step="1" value="0">
           <button class="button__plus"></button>
         </div>
-        <button class="button__add__product"><img src='./images/icon-cart.svg'>Add to cart</button>
+        <button type="submit" class="button__add__product"><img src='./images/icon-cart.svg'>Add to cart</button>
       </form>
   </article>
 
